@startuml design.png
package java.lang {

class Exception {
}

}

package repere {

abstract class ElementRepere {
+ {abstract} boolean validePour(Repere r)
+ {abstract} String svg()
+ {abstract} String serialisation()
}

ElementAvecCouleur <|-- Axe
ElementAvecCouleur <|-- ElementRepere
ElementAvecCouleur "1" *-- "1" Couleur : couleur

class Couleur {
- int r
- int g
- int b
+ {static} Couleur auHasard()
+ {static} Couleur noir()
+ {static} Couleur blanc()
+ {static} Couleur rouge()
+ {static} Couleur vert()
+ {static} Couleur bleu()
+ Couleur(int r, int g, int b)
+ boolean equals(Object o)
+ String serialisation()
+ String svg()
}

Exception <|-- HorsRepereException

class Axe {
- String titre
- int taille
+ Axe(Couleur c, String titre, int taille)
+ String serialisation();
}

class Repere {
- String titre
+ void ajouter(ElementRepere e) throws HorsRepereException
+ Repere(String titre, Axe x, Axe y)
+ {static} Repere charger(Reader r) throws HorsRepereException, IOException
+ void dessiner(Writer writer) throws IOException
+ void sauvegarder(Writer writer) throws IOException
}

Repere "1" *-- "1" Axe : x
Repere "1" *-- "1" Axe : y
Repere "1" *-- "*" ElementRepere : elements

}

package repere.formes {

ElementRepere <|-- Segment
Segment "1" *-- "1" Point : origine
Segment "1" *-- "1" Point : destination
class Segment {
+ Segment(Couleur c, Point start, Point end)
+ boolean equals(Object o)
+ int hashCode()
+ boolean validePour(Repere r)
+ String svg()
+ String serialisation()
}

ElementRepere <|-- Point
class Point {
- int x
- int y
+ Point(Couleur c, int x, int y)
+ boolean equals(Object o)
+ int hashCode()
+ boolean validePour(Repere r)
+ String svg()
+ String serialisation()
}

ElementRepere <|-- Cercle
Cercle "1" *-- "1" Point : centre
class Cercle {
- int rayon
+ Cercle(Couleur c, Point centre, int rayon)
+ boolean equals(Object o)
+ int hashCode()
+ boolean validePour(Repere r)
+ String svg()
+ String serialisation()
}

ElementRepere <|-- Triangle
Triangle "1" *-- "1" Point : point1
Triangle "1" *-- "1" Point : point2
Triangle "1" *-- "1" Point : point3
class Triangle {
+ Triangle(Couleur c, Point point1, Point point2, Point point3)
+ boolean equals(Object o)
+ int hashCode()
+ boolean validePour(Repere r)
+ String svg()
+ String serialisation()
}

}
@enduml
